--- a/css/global.css
+++ b/css/global.css
@@ -30,3 +30,11 @@ img {
   max-width: 5ch;
   /*4 caracter zero*/
 }
+
+@media (max-width: 800px) {
+  .subtitulo {
+    font-size: 3rem;
+    text-transform: capitalize;
+    max-width: initial;
+  }
+}
